# sumo-transcality

./: CMakeLists.txt  Dockerfile
.github/workflows/: sumo-build-registry-linux.yml  sumo-build-registry-macos.yml  sumo-build-registry.yml
src/: CMakeLists.txt  config.h.cmake
src/activitygen/: CMakeLists.txt
src/dfrouter/: CMakeLists.txt
src/duarouter/: CMakeLists.txt
src/jtrrouter/: CMakeLists.txt
src/marouter/: CMakeLists.txt
src/mesosim/: MEVehicle.cpp
src/netedit/: CMakeLists.txt
src/netgen/: CMakeLists.txt
src/polyconvert/: CMakeLists.txt
src/tools/: CMakeLists.txt
src/utils/: CMakeLists.txt
src/utils/common/: MsgRetrievingFunction.h
src/utils/gui/div/: GUIMessageWindow.h
src/utils/iodevices/: CMakeLists.txt  OutputDevice.cpp  OutputDevice.h  OutputDevice_Network.cpp  OutputDevice_Parquet.cpp  OutputDevice_Parquet.h  OutputDevice_ParquetUnstructured.cpp  OutputDevice_ParquetUnstructured.h  OutputFormatter.h  ParquetFormatter.h  ParquetUnstructuredFormatter.h  PlainXMLFormatter.cpp  PlainXMLFormatter.h  StreamDevices.h
unittest/src/: CMakeLists.txt
